# snacman

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/apps/asset_processor/asset_processor/: AssimpUtils.h  CMakeLists.txt  Logging.cpp  Logging.h  ProcessAnimation.cpp  ProcessAnimation.h  Processor.cpp  Processor.h  main.cpp
src/apps/refactor_proto/refactor_proto/: BinaryArchive.h  CMakeLists.txt  Camera.cpp  Camera.h  Commons.h  Cube.h  DrawQuad.cpp  DrawQuad.h  GlApi.h  IntrospectProgram.cpp  IntrospectProgram.h  Loader.cpp  Loader.h  Logging.h  Material.h  Model.h  Pass.cpp  Pass.h  Profiler.cpp  Profiler.h  ProfilerSeattle.cpp  Profiling.cpp  Profiling.h  ProviderRdtsc.h  ProviderWindows.cpp  ProviderWindows.h  RenderGraph.cpp  RenderGraph.h  RendererReimplement.h  Repositories.h  Scene.cpp  Scene.h  SceneGui.cpp  SceneGui.h  SetupDrawing.cpp  SetupDrawing.h  SetupVertexAttributes.cpp  SetupVertexAttributes.h  TheGraph.cpp  TheGraph.h  (+4 more)
src/apps/refactor_proto/refactor_proto/providers/: ProviderApi.h  ProviderCpu.cpp  ProviderCpu.h  ProviderGL.cpp  ProviderGL.h  ProviderRdtsc.cpp  ProviderRdtsc.h  ProviderWindows.cpp  ProviderWindows.h
src/apps/serial/serial/: CMakeLists.txt  Comp.h  Imgui_test.cpp  Imgui_test.h  Json.cpp  Reflexion.h  ReflexionFunctions.h  Reflexion_impl.h  Serialization.cpp  Serialization.h  SnacArchive.h  catch.hpp  comp.h  main.cpp
src/apps/serial/serial/reflexion/: Reflexion.h  Reflexion_impl.h
src/apps/serial/serial/serialization/: Imgui.h  ImguiSerialization.cpp  ImguiSerialization.h  Json.cpp  Json.h  JsonSerialization.h  JsonWitness.h  Serialization.h  Witness.cpp  Witness.h
src/apps/skinning_sandbox/skinning_sandbox/: CMakeLists.txt  Logging.cpp  Logging.h  Scene.cpp  Scene.h  Timing.h  main.cpp
src/apps/snac-viewer/snac-viewer/: CMakeLists.txt  DrawerShadows.cpp  DrawerShadows.h  Gui.h  Scene.h  Visuals.h  main.cpp
src/apps/snac-viewer/snac-viewer/detail/: Logger.cpp  Logger.h
src/apps/snacman/snacman/: CMakeLists.txt  CompilerDef.h  DebugDrawing.cpp  DebugDrawing.h  DevmodeControl.h  Entities.cpp  Entities.h  EntityUtilities.h  GraphicState.h  ImguiUtilities.h  Input.cpp  Input.h  Logging.h  LoopSettings.h  Profiling.h  ProfilingGPU.h  Profiling_V2.h  QueryManipulation.h  RenderThread.cpp  RenderThread.h  Resources.cpp  Resources.h  SparseSet.h  TemporaryRendererHelpers.h  Timing.h  build_info.h.in  main.cpp
src/apps/snacman/snacman/bawls/: Bawls.cpp  Bawls.h  ComponentGeometry.h  ComponentVelocity.h  GraphicState.h  Renderer.h  SystemCollide.h  SystemMove.h
src/apps/snacman/snacman/detail/: Common.h  Easer.h  Logger.cpp  Logger.h  Reflexion.h  Reflexion_impl.h  Serialization.cpp  Serialization.h
src/apps/snacman/snacman/serialization/: Imgui.h  ImguiSerialization.cpp  ImguiSerialization.h  Json.h  JsonSerialization.h  Serial.h  Witness.cpp  Witness.h
src/apps/snacman_tests/snacman_tests/: CMakeLists.txt
src/apps/text_sandbox/text_sandbox/: CMakeLists.txt  Logging.cpp  Logging.h  Scene.cpp  Scene.h  main.cpp
src/apps/viewer/viewer/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  ColorPalettes.h  DebugAndLogGui.cpp  DebugAndLogGui.h  DebugDrawGui.cpp  DebugDrawGui.h  DebugDrawUtilities.h  DrawQuad.cpp  DrawQuad.h  EnvironmentUtilities.cpp  EnvironmentUtilities.h  FrustumUtilities.h  GraphCommon.cpp  GraphCommon.h  GraphGui.cpp  GraphGui.h  Lights.h  Logging.cpp  PassViewer.cpp  PassViewer.h  Scene.cpp  Scene.h  SceneGui.cpp  SceneGui.h  SecondaryGraph.cpp  SecondaryGraph.h  SecondaryView.cpp  SecondaryView.h  TheGraph.cpp  TheGraph.h  Timing.h  ViewerApplication.cpp  ViewerApplication.h  build_info.h.in  main.cpp
src/apps/viewer/viewer/graph/: Clipping.h  Passes.cpp  Passes.h  ShadowCascadeBlock.h  ShadowMapping.cpp  ShadowMapping.h
src/apps/viewer/viewer/runtime_reflect/: DearImguiVisitor.h  ReflectHelpers.h
src/libs/file-processor/file-processor/: AssimpUtils.h  CMakeFinds.cmake.in  CMakeLists.txt  Logging-init.cpp  Logging-init.h  Logging.h  ProcessAnimation.cpp  ProcessAnimation.h  Processor.cpp  Processor.h
src/libs/profiler/profiler/: CMakeFinds.cmake.in  CMakeLists.txt  GlApi.h  Logging-init.cpp  Logging-init.h  Logging.h  Profiler.cpp  Profiler.h  ProfilerRegistry.cpp  ProfilerRegistry.h  ProfilerSeattle.h  Profiling.h
src/libs/profiler/profiler/providers/: ProviderApi.h  (+4 more)
src/libs/scene-renderer/scene-renderer/: CMakeFinds.cmake.in  CMakeLists.txt  Model.h
src/libs/snac-reflexion/snac-reflexion/: CMakeFinds.cmake.in  CMakeLists.txt  Reflexion.h  Reflexion_impl.h
src/libs/snac-renderer-V1/snac-renderer-V1/: CMakeFinds.cmake.in  CMakeLists.txt  Camera.cpp  Camera.h  Cube.h  DebugDrawer.cpp  DebugDrawer.h  DebugRenderer.h  Instances.h  IntrospectProgram.cpp  IntrospectProgram.h  LoadInterface.h  Logging.h  Mesh.cpp  Render.cpp  Render.h  Rigging.cpp  Rigging.h  Semantic.cpp  Semantic.h  SetupDrawing.cpp  SetupDrawing.h
src/libs/snac-renderer-V2/snac-renderer-V2/: CMakeFinds.cmake.in  CMakeLists.txt  Camera.cpp  Camera.h  Constants.cpp  Constants.h  Cube.h  Cubemap.cpp  Cubemap.h  Handle.h  IntrospectProgram.cpp  IntrospectProgram.h  Lights.h  Logging-channels.h  Logging-init.cpp  Logging-init.h  Logging.h  Material.h  Model.cpp  Model.h  Pass.cpp  Pass.h  Profiling.cpp  Profiling.h  RendererReimplement.h  Repositories.h  Rigging.cpp  Rigging.h  Semantics.h  SetupDrawing.cpp  Topics.md  VertexStreamUtilities.cpp  VertexStreamUtilities.h
src/libs/snac-renderer/snac-renderer/: CMakeFinds.cmake.in  CMakeLists.txt  Camera.cpp  Camera.h  Cube.h  DebugDrawer.cpp  DebugDrawer.h  DebugRenderer.cpp  DebugRenderer.h  Instances.h  IntrospectProgram.cpp  IntrospectProgram.h  LoadInterface.h  Logging.cpp  Logging.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  ResourceLoad.cpp  ResourceLoad.h  Rigging.cpp  Rigging.h  Semantic.cpp  Semantic.h  SetupDrawing.cpp  SetupDrawing.h  ShaderResource.cpp  ShaderResource.h  StackRepository.h  UniformParameters.h
src/libs/snacman/snacman/: CMakeFinds.cmake.in  CMakeLists.txt
src/libs/utilities/utilities/: CMakeLists.txt  ImguiUtilities.h  Time.h
(+409 files in other folders)
